--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                   and incredible offers.
                 </p>
     
-                <img src="." alt="" />
+                <img src="./svg/1640241561388.webp" alt="" />
               </div>
               <div
                 class="pb-0 space-y-6 pt-14 bg-white rounded-lg shadow-sm px-14 text-gray-600 body-font"
